--- a/src/styles.css
+++ b/src/styles.css
@@ -1,60 +1,122 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-:root {
+body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     --beige: #e2d8cc;
     --sharp-orange: #ff6054;
-    --slate-blue: #6a6e76;
-    --font-black: #2f2620;
-    --silver: #dadada;
+    --slate: #6a6e76;
+    --font-dark: #2f2620;
+    --font-silver: #dadada;
     --accent-gray: #aeadb0;
-}
-
-body {
-    background-color: var(--beige);
-    margin: 0 200px; 
+    background-color: var(--accent-gray);
+    margin: 0; 
     padding: 0;
     display: flex;
     flex-direction: column;
+    min-width: 300px;
     align-items: center;
     color: var(--font-black)
 }
 
-nav {
-    border: 1px solid red;
-    display: flex;
-}
-
-nav ul {
-    display: flex;
-    /* width: 100%; */
+h1 {
+    font-size: 5rem;
+    color: var(--font-dark);
+    width: 100%;
+    max-width: 1200px;
+    text-align: center;
+    padding: 70px 0;
+    background-image: url("./img/sunset3.png");
+    background-size: cover;
+    background-position: 50% 50%;
     margin: 0;
-    padding: 0;
-    list-style: none;
 }
 
-li {
-    margin: 0 30px;
+nav {
+    background-color: var(--sharp-orange);
+    font-size: 1.5rem;
+    font-weight: 600;
+    width: 100%;
+    max-width: 1200px;
+    padding: 20px 0;
 }
+
+    nav ul {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        list-style: none;
+    }
+
+    li {
+        margin: 0 30px;
+    }
 
 main {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--sharp-orange);
-    max-width: 1000px;
+    background-color: var(--beige);
+    width: 100%;
+    max-width: 1200px;
 }
 
 .icon {
-    padding-right: 20px;
+    padding-right: 10px;
     height: 1.5rem;
 }
-  
-.projects {
-    border-left: 5px solid var(--sharp-orange);
-    box-shadow: 2px 3px rgb(192, 192, 192);
-    height: 200px;
-    position: relative;
+
+.icon:hover {
+    transform: scale(1.25);
 }
+
+.projects-cont {
+    border: 1px solid purple;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    justify-content: center;
+    gap: 25px;
+}
+
+    .project {
+        background-color: var(--slate);
+        border-bottom: 5px solid var(--sharp-orange);
+        border-radius: 3px;
+        color: var(--font-silver);
+        box-shadow: 7px 5px 5px #9a958d;
+        width: 300px;
+        position: relative;
+        margin: 20px;
+    }
+
+    .project-img {
+        padding: 0;
+        width: 300px;
+        height: 300px;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+    }
+
+    .project-sub {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .project-name {
+        margin: 10px;
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
+    .project-text {
+        margin: 10px;
+        font-size: 1rem;
+        background: var(--silver);
+    }
+
+    .project-btns {
+        margin: 10px 0 ;
+        top: 0;
+        right: 0;
+        position: absolute;
+    }
 
 @media (max-width: 1000px) {
 body {
