--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,9 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     --beige: #e2d8cc;
+    --beige-shadow: #9a958d;
     --sharp-orange: #ff6054;
+    --purple-accent: #261933;
     --slate: #6a6e76;
     --font-dark: #2f2620;
     --font-silver: #dadada;
@@ -34,10 +36,16 @@ h1 {
     margin: 0;
 }
 
+h2 {
+    font-size: 2.5rem;
+    margin: 20px 0;
+}
+
 nav {
     background-color: var(--sharp-orange);
     font-size: 2rem;
     font-weight: 600;
+    color: var(--font-silver);
     width: 100%;
     padding: 20px 0;
 }
@@ -50,7 +58,15 @@ nav {
     }
 
     li {
-        margin: 0 30px;
+        margin: 0 20px;
+        padding: 10px;
+    }
+
+    li:hover {
+        background-color: var(--purple-accent);
+        border-radius: 5px;
+        transform: scale(1.1);
+        box-shadow: 2px 2px 2px var(--font-dark);
     }
 
 .icon {
@@ -65,44 +81,58 @@ nav {
 main {
     background-color: var(--beige);
     width: 100%;
+    padding-bottom: 30px;
 }
 
     .about-me {
-        /* border: 1px solid red; */
         display: flex;
         align-items: center;
-        margin: 30px;
+
+
+        padding: 40px 80px;
     }
 
-        .about-me-img {
-            margin: 20px 0;
+        header {
+            position: relative;
+            padding: 2.5vh 4vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(171.5deg, var(--purple-accent) 65.5%, var(--beige-shadow) 66%, var(--beige) 67%);
+        }
+
+        .about-me-img-cont {
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+
+        .img-name {
+            position: absolute;
+            bottom: 0;
+            font-size: max(2.25vw, 2.75rem);
         }
 
         .about-me-card {
             background-color: var(--slate);
             color: var(--font-silver);
-            /* border: 1px solid blue; */
-            height: 275px;
+            min-height: 300px;
             padding: 0 20px;
             position: relative;
+            box-shadow: 0 5px 5px var(--beige-shadow);
         }
 
-        .diy {
-            font-weight: 600;
-        }
-
-        .diy:hover {
-            font-size: 2rem;
+        .about-me-desc {
+            line-height: 1.5rem;
         }
 
     .project, .project-img {
-        width: 325px;
+        width: 400px;
     }
 
     .projects-cont {
-        /* border: 1px solid purple; */
         display: grid;
-        grid-template-columns: repeat(auto-fill, 350px);
+        grid-template-columns: repeat(auto-fill, 450px);
         justify-content: center;
         gap: 40px 25px;
         margin: 30px 0;
@@ -113,13 +143,13 @@ main {
             border-bottom: 5px solid var(--sharp-orange);
             border-radius: 3px;
             color: var(--font-silver);
-            box-shadow: 7px 5px 5px #9a958d;
+            box-shadow: 5px 5px 5px var(--beige-shadow);
             position: relative;
         }
 
         .project-img {
             padding: 0;
-            height: 300px;
+            height: 350px;
             border-top-left-radius: 3px;
             border-top-right-radius: 3px;
         }
@@ -150,24 +180,20 @@ main {
         }
 
 footer {
+    border: 1px solid red;
     display: flex;
     justify-content: center;
-    background-color: var(--slate);
+    background-color: var(--purple-accent);
     font-size: 1rem;
-    color: white;
+    color: var(--font-silver);
     width: 100%;
     padding: 20px 0;
 }
 
-    h2 {
-        font-size: 2.5rem;
-        margin: 10px 0;
-    }
-
     .contact-cont {
         display: flex;
         flex-direction: column;
-        margin: 0 30px;
+        margin: 0 50px;
         max-width: 450px;
     }
 
@@ -177,14 +203,77 @@ footer {
         line-height: 2rem;
     }
 
+    #contact-img {
+        margin: 0 -10px;
+        max-width: 100%;
+    }
+
 @media (max-width: 1000px) {
-body {
-    background: green;
-}
+    body {
+        background: green;
+        margin: 0 10px;
+    }
+
+    h1 {
+        font-size: 4.5rem;
+    }
+
+    header {
+        border: 1px solid purple;
+    }
+
+    .about-me {
+        border: 1px solid red;
+    }
+
+    .about-me-img-cont {
+        border: 1px solid green;
+    }
+
+    .about-me-img {
+
+    }
+
+    .img-name {
+
+    }
+
+    .about-me-card {
+        border: 1px solid blue;
+    }
+
+    footer {
+        flex-wrap: wrap;
+    }
 }
 
 @media (max-width: 800px) {
-body {
-    background: lightskyblue;
-}
+    body {
+        margin: 0;
+    }
+
+    h1 {
+        font-size: 3.5rem;
+    }
+    
+    main {
+        margin: 0;
+        justify-content: center;
+    }
+
+    .about-me {
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 0;
+    }
+
+    .about-me-card {
+        border: 1px solid red;
+        margin: 0;
+    }
+
+    #contact-img {
+        margin: 0;
+        max-width: 100%;
+    }
 }
