--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ body {
 
 h1, nav, main, footer {
     max-width: 1200px;
+    box-shadow: 12px 10px 20px -2px var(--slate), -12px 10px 10px 2px var(--slate);
 }
 
 h1 {
@@ -129,7 +130,8 @@ main {
             padding: 5px 0;
             font-size: max(2.25vw, 2.75rem);
             font-weight: 400;
-            color: var(--font-silver);
+            color: white;
+            text-shadow: 2px 3px var(--slate);
         }
 
         .about-me-card {
